// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WritePostModal component renders correctly when it is invisible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={undefined}
  transparent={false}
  visible={false}
>
  <WritePostScreen
    isFacebookAvailable={false}
    isTwitterAvailable={true}
  />
</Modal>
`;

exports[`WritePostModal component renders correctly when it is visible 1`] = `
<Modal
  animationType="slide"
  hardwareAccelerated={false}
  onRequestClose={undefined}
  transparent={false}
  visible={true}
>
  <WritePostScreen
    isFacebookAvailable={false}
    isTwitterAvailable={true}
  />
</Modal>
`;
